[gd_scene format=3 uid="uid://cuo7um5xrdifo"]

[ext_resource type="PackedScene" uid="uid://n6ecpp4f60w8" path="res://core/ui/game/player_ui.tscn" id="1_08nnd"]
[ext_resource type="Script" uid="uid://d2y1hi6r2x6nq" path="res://core/gameplay/player_spectator.gd" id="1_eomyr"]
[ext_resource type="Shader" uid="uid://15332wfpffyw" path="res://core/resources/shader/rear_view_mirror.gdshader" id="3_lyypb"]

[sub_resource type="ViewportTexture" id="ViewportTexture_lyypb"]
viewport_path = NodePath("RearViewMirror/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6jlnc"]
resource_local_to_scene = true
shader = ExtResource("3_lyypb")
shader_parameter/viewport = SubResource("ViewportTexture_lyypb")

[node name="PlayerSpectator" type="Node3D" unique_id=857663324]
top_level = true
script = ExtResource("1_eomyr")

[node name="PlayerUI" parent="." unique_id=1361609481 instance=ExtResource("1_08nnd")]

[node name="RearViewMirror" parent="PlayerUI/HSplitContainer/RearViewMirror" parent_id_path=PackedInt32Array(1361609481, 909807405) index="0" unique_id=942523188]
material = SubResource("ShaderMaterial_6jlnc")

[node name="RearViewCamera" type="Camera3D" parent="PlayerUI/HSplitContainer/RearViewMirror/RearViewMirror/SubViewport" parent_id_path=PackedInt32Array(1361609481, 909807405, 826522085) index="0" unique_id=1764865971]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.003825)
cull_mask = 1048563
fov = 40.0
far = 200.0

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="." unique_id=273114835]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.034)
remote_path = NodePath("../PlayerUI/HSplitContainer/RearViewMirror/RearViewMirror/SubViewport/RearViewCamera")

[node name="ReflectionProbe" type="ReflectionProbe" parent="." unique_id=27073802]
layers = 6
update_mode = 1
max_distance = 60.0
size = Vector3(50.005, 15, 50.008)
origin_offset = Vector3(0, 1, 0)
cull_mask = 1047553
reflection_mask = 1047566

[node name="MainCamera" type="Camera3D" parent="." unique_id=1594213212]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
top_level = true
cull_mask = 1048567
doppler_tracking = 2
current = true
fov = 70.8
size = 0.07
far = 500.0

[node name="CameraArm" type="SpringArm3D" parent="." unique_id=1537446907]
collision_mask = 7

[node name="CameraTarget" type="Marker3D" parent="CameraArm" unique_id=1297170021]

[editable path="PlayerUI"]
[editable path="PlayerUI/HSplitContainer/RearViewMirror"]
